Added 6 mods and updated 4 mods

--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -211,6 +211,8 @@ general {
 
     #  [range: 0 ~ 50, default: 1]
     I:"chickens:chickenschicken"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"cyberware:cyberzombie"=0
 
     #  [range: 0 ~ 50, default: 1]
@@ -658,6 +660,18 @@ general {
     I:"roughmobsrevamped:hostilebat"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"stupidthings:balloon"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"stupidthings:balloonliquid"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"stupidthings:blockbomb"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"stupidthings:smokebomb"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"tconstruct:blueslime"=1
 
     #  [range: 0 ~ 50, default: 1]
@@ -755,8 +769,6 @@ general {
 
     #  [range: 0 ~ 50, default: 1]
     I:"thermalfoundation:blizz"=8
-
-    #  [range: 0 ~ 50, default: 1]
     I:"wizardry:angel_zachriel"=1
 
     #  [range: 0 ~ 50, default: 1]
