--- a/config/apotheosis/enchantability.cfg
+++ b/config/apotheosis/enchantability.cfg
@@ -369,6 +369,9 @@
     I:CVOID=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
+    I:Cactus=10
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 10]
     I:DIAMOND=10
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
@@ -568,11 +571,7 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"artisanworktables:BONE"=5
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 6]
     I:"artisanworktables:BORON"=6
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:"artisanworktables:BORONNITRIDE"=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
@@ -589,6 +588,8 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 30]
     I:"artisanworktables:ELECTRUM"=30
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:"artisanworktables:ELEMENTIUM"=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
@@ -596,8 +597,6 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:"artisanworktables:GOLD"=22
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
     I:"artisanworktables:HARDCARBON"=12
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 16]
@@ -608,12 +607,12 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
     I:"artisanworktables:LEAD"=9
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:"artisanworktables:MANASTEEL"=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
     I:"artisanworktables:NICKEL"=18
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
     I:"artisanworktables:OSMIUM"=12
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
@@ -627,12 +626,12 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"artisanworktables:STONE"=5
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 26]
     I:"artisanworktables:TERRASTEEL"=26
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 7]
     I:"artisanworktables:TIN"=7
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:"artisanworktables:TOUGHALLOY"=15
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
@@ -643,11 +642,7 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"athenaeum:BONE"=5
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 6]
     I:"athenaeum:BORON"=6
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:"athenaeum:BORONNITRIDE"=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
@@ -667,8 +662,6 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"athenaeum:FLINT"=5
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
     I:"athenaeum:HARDCARBON"=12
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 16]
@@ -682,11 +675,7 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
     I:"athenaeum:NICKEL"=18
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
     I:"athenaeum:OBSIDIAN"=18
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
     I:"athenaeum:OSMIUM"=12
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
@@ -703,8 +692,6 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 7]
     I:"athenaeum:TIN"=7
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:"athenaeum:TOUGHALLOY"=15
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 50]
