--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -1081,6 +1081,10 @@ tools {
     S:CVOID <
      >
 
+    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
+    S:Cactus <
+     >
+
     # A list of material-based prefix names for the given tool material. May be empty. [default: [Diamond], [Zircon], [Gemstone], [Jewel], [Crystal]]
     S:DIAMOND <
         Diamond
@@ -1471,12 +1475,8 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:BONE" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:BORON" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:BORONNITRIDE" <
      >
 
@@ -1503,8 +1503,6 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:FLINT" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:HARDCARBON" <
      >
 
@@ -1523,12 +1521,8 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:NICKEL" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:OBSIDIAN" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:OSMIUM" <
      >
 
@@ -1551,8 +1545,6 @@ tools {
     # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:TIN" <
      >
-
-    # A list of material-based prefix names for the given tool material. May be empty. [default: ]
     S:"athenaeum:TOUGHALLOY" <
      >
 
