--- a/config/botania.cfg
+++ b/config/botania.cfg
@@ -240,6 +240,8 @@ shedding {
     I:"chickens:chickenschicken.lexiconDisplaySize"=40
     I:"chickens:chickenschicken.metadata"=0
     I:"chickens:chickenschicken.rate"=-1
+
+    # Configuration of Shedding for cyberware:cyberzombie
     S:"cyberware:cyberzombie.item"=
     I:"cyberware:cyberzombie.lexiconDisplaySize"=40
     I:"cyberware:cyberzombie.metadata"=0
@@ -1137,6 +1139,30 @@ shedding {
     I:"roughmobsrevamped:hostilebat.metadata"=0
     I:"roughmobsrevamped:hostilebat.rate"=-1
 
+    # Configuration of Shedding for stupidthings:balloon
+    S:"stupidthings:balloon.item"=
+    I:"stupidthings:balloon.lexiconDisplaySize"=40
+    I:"stupidthings:balloon.metadata"=0
+    I:"stupidthings:balloon.rate"=-1
+
+    # Configuration of Shedding for stupidthings:balloonliquid
+    S:"stupidthings:balloonliquid.item"=
+    I:"stupidthings:balloonliquid.lexiconDisplaySize"=40
+    I:"stupidthings:balloonliquid.metadata"=0
+    I:"stupidthings:balloonliquid.rate"=-1
+
+    # Configuration of Shedding for stupidthings:blockbomb
+    S:"stupidthings:blockbomb.item"=
+    I:"stupidthings:blockbomb.lexiconDisplaySize"=40
+    I:"stupidthings:blockbomb.metadata"=0
+    I:"stupidthings:blockbomb.rate"=-1
+
+    # Configuration of Shedding for stupidthings:smokebomb
+    S:"stupidthings:smokebomb.item"=
+    I:"stupidthings:smokebomb.lexiconDisplaySize"=40
+    I:"stupidthings:smokebomb.metadata"=0
+    I:"stupidthings:smokebomb.rate"=-1
+
     # Configuration of Shedding for tconstruct:blueslime
     S:"tconstruct:blueslime.item"=
     I:"tconstruct:blueslime.lexiconDisplaySize"=40
@@ -1334,8 +1360,6 @@ shedding {
     I:"thermalfoundation:blizz.lexiconDisplaySize"=40
     I:"thermalfoundation:blizz.metadata"=0
     I:"thermalfoundation:blizz.rate"=-1
-
-    # Configuration of Shedding for wizardry:angel_zachriel
     S:"wizardry:angel_zachriel.item"=
     I:"wizardry:angel_zachriel.lexiconDisplaySize"=40
     I:"wizardry:angel_zachriel.metadata"=0
