--- a/config/theoneprobe.cfg
+++ b/config/theoneprobe.cfg
@@ -7,26 +7,19 @@
 ##########################################################################################################
 
 client {
-    # Color of the border of the box (0 to disable) [default: ff999999]
-    S:boxBorderColor=0
+    S:boxBorderColor=ff999999
 
     # The distance to the bottom side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: -1]
     I:boxBottomY=-1
-
-    # Color of the box (0 to disable) [default: 55006699]
-    S:boxFillColor=0
+    S:boxFillColor=55006699
 
     # The distance to the left side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 5]
     I:boxLeftX=-1
-
-    # How much the border should be offset (i.e. to create an 'outer' border) [range: 0 ~ 20, default: 0]
     I:boxOffset=0
 
     # The distance to the right side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: -1]
     I:boxRightX=-1
-
-    # Thickness of the border of the box (0 to disable) [range: 0 ~ 20, default: 2]
-    I:boxThickness=0
+    I:boxThickness=2
 
     # The distance to the top side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 5]
     I:boxTopY=5
@@ -51,40 +44,22 @@ client {
 
     # 0 means don't show break progress, 1 is show as bar, 2 is show as text [range: 0 ~ 2, default: 1]
     I:showBreakProgress=1
+
+    # If true show liquid information when the probe hits liquid first [default: false]
     B:showLiquids=false
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: red,bold]
     S:textStyleError=red,bold
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: white]
     S:textStyleInfo=white
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: blue]
     S:textStyleInfoImportant=blue
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: gray]
     S:textStyleLabel=gray
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: blue,italic]
     S:textStyleModName=blue,italic
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: white]
     S:textStyleName=white
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: gray,strikethrough]
     S:textStyleObsolete=gray,strikethrough
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: green]
     S:textStyleOk=green
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: white]
     S:textStyleProgress=white
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: yellow]
     S:textStyleWarning=yellow
 
     # The scale of the tooltips, 1 is default, 2 is smaller [range: 0.4 ~ 5.0, default: 1.0]
-    S:tooltipScale=1.0
+    S:tooltipScale=1.100000023841858
 }
 
 
@@ -103,7 +78,7 @@ providers {
     S:excludedProviders <
      >
 
-    # Order in which entity providers should be used [default: [theoneprobe:entity.default], [theoneprobe:entity.debug], [theoneprobe:entity.entity], [iceandfire.dragon_info], [topaddons:base], [topaddons:architecturecraft], [topaddons:bloodmagic], [topaddons:chisel], [topaddons:extrautils2], [topaddons:opencomputers], [topaddons:roost], [topaddons:thermaldynamics], [topaddons:thermalexpansion], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic], [chickens:chickenstop]]
+    # Order in which entity providers should be used [default: [theoneprobe:entity.default], [theoneprobe:entity.debug], [theoneprobe:entity.entity], [iceandfire.dragon_info], [topaddons:base], [topaddons:architecturecraft], [topaddons:bloodmagic], [topaddons:chisel], [topaddons:extrautils2], [topaddons:opencomputers], [topaddons:roost], [topaddons:storagedrawers], [topaddons:thermaldynamics], [topaddons:thermalexpansion], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic], [chickens:chickenstop]]
     S:sortedEntityProviders <
         theoneprobe:entity.default
         theoneprobe:entity.debug
@@ -122,7 +97,7 @@ providers {
         chickens:chickenstop
      >
 
-    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [gregtech:energy_container_provider], [gregtech:workable_provider], [gregtech:controllable_provider], [gregtech:debug_pipe_net_provider], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [thermalexpansion.topplugin], [enderio:default], [tconstruct:casting], [tconstruct:progress], [compactmachines3:default], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [mcjtylib:default], [topaddons:base], [topaddons:architecturecraft], [topaddons:bloodmagic], [topaddons:chisel], [topaddons:extrautils2], [topaddons:opencomputers], [topaddons:roost], [topaddons:thermaldynamics], [topaddons:thermalexpansion], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic], [cookingforblockheads], [mekanism], [fluxnetworks]]
+    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [gregtech:energy_container_provider], [gregtech:workable_provider], [gregtech:controllable_provider], [gregtech:debug_pipe_net_provider], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [thermalexpansion.topplugin], [enderio:default], [tconstruct:casting], [tconstruct:progress], [compactmachines3:default], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [mcjtylib:default], [logisticspipes:pipe_info_provider], [thaumicenergistics:TileTOPDataProvider], [topaddons:base], [topaddons:architecturecraft], [topaddons:bloodmagic], [topaddons:chisel], [topaddons:extrautils2], [topaddons:opencomputers], [topaddons:roost], [topaddons:storagedrawers], [topaddons:thermaldynamics], [topaddons:thermalexpansion], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic], [cookingforblockheads], [mekanism], [fluxnetworks]]
     S:sortedProviders <
         theoneprobe:default
         theoneprobe:debug
@@ -187,8 +162,6 @@ theoneprobe {
 
     # The maximum packet size to send an itemstack from client to server. Reduce this if you have issues with network lag caused by TOP [range: -1 ~ 32768, default: 20000]
     I:maxPacketToServer=20000
-
-    # Is the probe needed to show the tooltip? 0 = no, 1 = yes, 2 = yes and clients cannot override, 3 = probe needed for extended info only [range: 0 ~ 3, default: 3]
     I:needsProbe=0
 
     # Distance at which the probe works [range: 0.1 ~ 200.0, default: 6.0]
