Updated some mods and changed advRocketry for bug fix

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 /config/brandon3055/ProjectIntelligence/PackDocs/
 /config/brandon3055/ResourceCache/
 /config/splash.properties
+/config/oauth.cfg
 /config/jei/bookmarks.ini
 /config/jei/worldSettings.cfg
 /ESM/
